# codex-a2a

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-health.yml  publish.yml
docs/: a2a-extension-baseline.md  architecture.md  compatibility.md  conformance-triage.md  conformance.md  dependency-audit-2026-05.md  deployment.md  extension-specifications.md  guide.md  maintainer-architecture.md
scripts/: README.md  audit_low_call_sites.py  check_dead_code.py  conformance.sh  dependency_health.sh  deploy.sh  doctor.sh  health_common.sh  init_system.sh  publish_github_release.sh  smoke_test_built_cli.sh  sync_codex_docs.sh  validate_baseline.sh
scripts/deploy/: install_units.sh
src/codex_a2a/: __init__.py  a2a_proto.py  auth.py  cli.py  config.py  input_mapping.py  logging_context.py  media_modes.py  metrics.py  payload_helpers.py  protocol_versions.py
src/codex_a2a_serve/: agent.py  app.py  codex_client.py  config.py  streaming.py  tool_call_payloads.py
src/codex_a2a_server/: agent.py  app.py  cli.py  codex_client.py  config.py  extension_contracts.py  jsonrpc_ext.py  jsonrpc_models.py  openapi_contracts.py  stream_interrupts.py  streaming.py
tests/: helpers.py  test_a2a_proto.py  test_agent_card.py  test_cli.py  test_codex_agent_session_binding.py  test_codex_client_params.py  test_directory_validation.py  test_extension_contract_consistency.py  test_input_mapping.py  test_jsonrpc_models.py  test_metrics.py  test_opencode_client_params.py  test_protocol_versions.py  test_release_distribution_contract.py  test_request_handler.py  test_settings.py  test_stream_chunks.py  test_stream_interrupts.py  test_streaming_output_contract.py  test_tool_call_payloads.py  test_transport_contract.py
tests/client/: __init__.py  test_agent_card.py  test_cli.py  test_client_flow.py  test_client_manager.py  test_errors.py  test_lifecycle.py  test_payload_text.py  test_request_context.py  test_types.py
tests/config/: test_settings.py
tests/contracts/: test_extension_contract_consistency.py  test_extension_registry.py
tests/execution/: test_agent_errors.py  test_cancellation.py  test_codex_agent_session_binding.py  test_directory_validation.py  test_discovery_exec_runtime.py  test_metrics.py  test_request_metadata.py  test_review_runtime.py  test_session_ownership.py  test_session_persistence.py  test_session_runtime.py  test_stream_chunks.py  test_stream_interrupts.py  test_streaming_output_contract.py  test_thread_lifecycle_runtime.py  test_tool_call_payloads.py
(+139 files in other folders)
